<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="330dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="194dp"
        android:layout_height="320dp"
        android:layout_gravity="center"
        android:clickable="true"
        app:cardCornerRadius="8dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:contentDescription="@string/product_picture"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ebay_default" />

            <LinearLayout
                android:layout_width="170dp"
                android:layout_height="135dp"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ellipsize="end"
                    android:lines="3"
                    android:text="@string/testtext"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/ship_top"
                    android:layout_width="match_parent"
                    android:layout_height="67dp"
                    android:layout_gravity="center"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/condition"
                        android:layout_width="115dp"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:text="@string/condition_text"
                        android:textSize="10sp"
                        android:textStyle="bold|italic" />

                    <TextView
                        android:id="@+id/price"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:gravity="bottom|right"
                        android:text="@string/keyword_text"
                        android:textColor="@android:color/holo_green_dark"
                        android:textSize="12sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

</FrameLayout>